--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
   "bugs": {
     "url": "https://github.com/robotlolita/helm/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "adt-simple": "^0.1.3",
+    "core.arity": "^1.0.0",
+    "core.lambda": "^1.0.0",
+    "ent": "^2.0.0",
+    "net.uri": "^0.1.6"
+  },
   "devDependencies": {
+    "adt-simple": "^0.1.3",
     "alright": "^1.0.0",
     "browserify": "^3.33.0",
     "hifive": "^0.4.0",
@@ -28,6 +35,7 @@
     "hifive-tap": "^0.1.0",
     "ink-docstrap": "git://github.com/robotlolita/docstrap",
     "jsdoc": "^3.3.0-alpha5",
+    "lambda-chop": "^0.1.5",
     "laws": "^0.2.1",
     "sweet.js": "^0.6.0",
     "uglify-js": "^2.4.3"
