--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsdoc": "^3.3.0-alpha5",
     "lambda-chop": "^0.1.5",
     "laws": "^0.2.1",
+    "macros.operators": "^0.4.0",
     "sweet.js": "^0.6.0",
     "uglify-js": "^2.4.3"
   }
