--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lambda-chop": "^0.1.5",
     "laws": "^0.2.1",
     "macros.operators": "^0.4.0",
+    "sparkler": "^0.3.2",
     "sweet.js": "^0.6.0",
     "uglify-js": "^2.4.3"
   }
