--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "escodegen": "^1.3.3",
     "esprima": "^1.2.2",
     "net.uri": "^0.1.6",
-    "ometajs": "^3.3.6"
+    "ometajs": "^3.3.6",
+    "xtend": "^3.0.0"
   },
   "devDependencies": {
     "alright": "^1.0.0",
