Outputs verbatim expressions.
This means two things: (1) we can't ensure that the outputted expression results in valid JavaScript (BAD!!!!1!), but (2) we can continue expanding the expression with Sweet.js.

I think (2) outweights the problems with (1)? Not quite sure, this could be a reeeeally bad idea.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "helm",
   "version": "0.0.0",
-  "description": "A type-safe HTML templating library.",
+  "description": "A safe HTML templating embedded domain specific language.",
   "main": "lib/index.js",
   "scripts": {
     "test": "make test"
@@ -11,8 +11,9 @@
     "url": "https://github.com/robotlolita/helm"
   },
   "keywords": [
-    "fantasy-land",
-    "folktale"
+    "html",
+    "templating",
+    "edsl"
   ],
   "author": "Quildreen Motta",
   "license": "MIT",
