--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "helm",
   "version": "0.0.0",
-  "description": "A safe HTML templating embedded domain specific language.",
-  "main": "lib/index.js",
+  "description": "Safe HTML templating",
+  "main": "build/index.js",
   "scripts": {
-    "test": "make test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,29 +20,6 @@
   "bugs": {
     "url": "https://github.com/robotlolita/helm/issues"
   },
-  "dependencies": {
-    "adt-simple": "^0.1.3",
-    "core.arity": "^1.0.0",
-    "core.lambda": "^1.0.0",
-    "ent": "^2.0.0",
-    "escodegen": "^1.3.3",
-    "esprima": "^1.2.2",
-    "net.uri": "^0.1.6",
-    "ometajs": "^3.3.6",
-    "xtend": "^3.0.0"
-  },
-  "devDependencies": {
-    "alright": "^1.0.0",
-    "browserify": "^3.33.0",
-    "hifive": "^0.4.0",
-    "hifive-spec": "^0.2.1",
-    "ink-docstrap": "git://github.com/robotlolita/docstrap",
-    "jsdoc": "^3.3.0-alpha5",
-    "lambda-chop": "^0.1.5",
-    "laws": "^0.2.1",
-    "macros.operators": "^0.4.0",
-    "sparkler": "^0.3.2",
-    "sweet.js": "^0.6.0",
-    "uglify-js": "^2.4.3"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
